--- a/Week3/website/hobbiesAndInterests.html
+++ b/Week3/website/hobbiesAndInterests.html
@@ -6,17 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Hamza Zamir</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <h1>Hamza Zamir</h1>
-
-    <a href="personOfInterest.html">Person of interest</a>
-    <br>
-    <a href="hobbiesAndInterests.html">Hobbies and Interests</a>
-
-
 
 </body>
 
