--- a/Week3/website/index.html
+++ b/Week3/website/index.html
@@ -12,9 +12,41 @@
 <body>
     <h1>Hamza Zamir</h1>
 
-    <a href="personOfInterest.html">Person of interest</a>
-    <br>
-    <a href="hobbiesAndInterests.html">Hobbies and Interests</a>
+
+    <nav class="navBar">
+        <ul>
+            <li>
+                <a href="index.html">Home
+            </li>
+            <li>
+                <a href="personOfInterest.html">Person of Interest
+            </li>
+            <li>
+                <a href="hobbiesAndInterests.html">Hobbies and Interests
+            </li>
+        </ul>
+    </nav>
+
+
+
+    <dl class="softwareSkills">
+        <dt>Skills</dt>
+        <dd>This is a list of skills I have in relation to Software Developement</dd>
+        <dt>Python</dt>
+        <dd>I have an intermediate level of proficiency in Python</dd>
+        <dt>Git/Github</dt>
+        <dd>I possess an intermediate understanding of Git and GitHub, effectively managing version control.
+        </dd>
+        </dd>
+        <dt>Mac Terminal</dt>
+        <dd>With an intermediate knowledge of the Mac Terminal, I can navigate, manage files, and perform basic
+            tasks efficiently.</dd>
+
+
+    </dl>
+
+
+
 
 
 
