--- a/Week3/website/personOfInterest.html
+++ b/Week3/website/personOfInterest.html
@@ -12,6 +12,20 @@
 <body>
     <h1>Aristotle</h1>
 
+    <nav class="navBar">
+        <ul>
+            <li>
+                <a href="index.html">Home
+            </li>
+            <li>
+                <a href="personOfInterest.html">Person of Interest
+            </li>
+            <li>
+                <a href="hobbiesAndInterests.html">Hobbies and Interests
+            </li>
+        </ul>
+    </nav>
+
 </body>
 
 </html>
