--- a/Week3/website/hobbiesAndInterests.html
+++ b/Week3/website/hobbiesAndInterests.html
@@ -11,6 +11,20 @@
 
 <body>
 
+    <nav class="navBar">
+        <ul>
+            <li>
+                <a href="index.html">Home
+            </li>
+            <li>
+                <a href="personOfInterest.html">Person of Interest
+            </li>
+            <li>
+                <a href="hobbiesAndInterests.html">Hobbies and Interests
+            </li>
+        </ul>
+    </nav>
+
 </body>
 
 </html>
