--- a/Week3/website/hobbiesAndInterests.html
+++ b/Week3/website/hobbiesAndInterests.html
@@ -11,6 +11,8 @@
 
 <body>
 
+    <h1>Hobbies and Interests</h1>
+
     <nav class="navBar">
         <ul>
             <li>
@@ -24,6 +26,45 @@
             </li>
         </ul>
     </nav>
+
+    <div class="content">
+        <p>
+            Philosophy:
+            Exploring the profound depths of human thought and existence, I find solace in the timeless questions raised
+            by
+            philosophy. From ancient to modern philosophies, I engage in reading philosophical treatises, pondering the
+            nature of reality, morality, and the human mind. The pursuit of wisdom and understanding is a constant
+            source of
+            fascination for me.</p>
+
+        <p>History:
+            Delving into the annals of the past, history opens a captivating window to the tapestry of human
+            civilization. I
+            immerse myself in various historical periods, studying the rise and fall of civilizations, great events, and
+            the
+            remarkable individuals who shaped the course of history. Unraveling the stories of the past helps me gain
+            insights into the present and envision the possibilities of the future.</p>
+
+        <p>Coding:
+            As an enthusiastic coder, I indulge in the art of programming to craft solutions and bring ideas to life.
+            From
+            web development to software projects, coding fuels my creativity and problem-solving skills. The joy of
+            seeing
+            code function seamlessly and the ability to create applications that impact lives drives my passion for this
+            ever-evolving field.</p>
+
+        <p>Thoroughbred Horses:
+            A deep appreciation for the elegance and spirit of thoroughbred horses has drawn me into the world of
+            equestrian
+            interests. From their breathtaking grace on the racecourse to the enduring bond formed with these majestic
+            creatures, I enjoy learning about their history, breeding, and the art of horsemanship.</p>
+
+        <p>Reading:
+            Books are my constant companions, and I cherish the knowledge and imagination they bestow upon me. Fictional
+            realms transport me to magical worlds, while non-fiction unveils the wonders of science, philosophy, and
+            personal growth. The love of reading fuels my desire to explore diverse genres and keeps my curiosity alive.
+        </p>
+    </div>
 
 </body>
 
