--- a/Week3/website/personOfInterest.html
+++ b/Week3/website/personOfInterest.html
@@ -26,6 +26,61 @@
         </ul>
     </nav>
 
+    <div class="content">
+        <p>
+            Aristotle is often regarded as one of the greatest minds in history due to his profound contributions to
+            various
+            fields, including philosophy, science, and logic. As one of the most influential ancient Greek philosophers,
+            his
+            impact on the world is significant and enduring.</p>
+
+
+        <p>Aristotle's genius lies in his ability to systematize knowledge and his relentless pursuit of understanding
+            the
+            natural world. He founded the Lyceum, where he taught and conducted research on a vast range of subjects.
+            His
+            works covered topics as diverse as metaphysics, ethics, politics, biology, physics, and rhetoric.</p>
+
+
+        <p>In philosophy, Aristotle's emphasis on empirical observation and logical reasoning laid the groundwork for
+            scientific inquiry. His writings on ethics and virtue ethics continue to influence moral philosophy to this
+            day.
+        </p>
+
+
+
+        <p>His works on logic, particularly his syllogism, provided a formal method for reasoning, becoming a
+            cornerstone
+            of Western intellectual tradition. His systematic approach to categorizing and analyzing knowledge in
+            "Organon"
+            significantly impacted later philosophical and scientific thought.</p>
+
+
+        <p>In the realm of science, Aristotle's ideas held sway for centuries. While some of his scientific theories
+            have
+            been superseded, his principles of observation, classification, and empirical investigation were
+            revolutionary
+            in their time and laid the foundation for the development of modern scientific methods.</p>
+
+
+        <p>Aristotle's influence also extended to political thought, where his ideas on the ideal state and the role of
+            government informed political philosophy and governance for generations.</p>
+
+
+        <p>Throughout history, Aristotle's works were preserved and studied by various civilizations, including the
+            Islamic
+            scholars during the Middle Ages, leading to the revival of Aristotle's thought in Europe during the
+            Renaissance.
+        </p>
+
+        <p>In summary, Aristotle's intellectual brilliance and profound contributions to diverse disciplines have
+            solidified his position as one of the greatest minds in history. His enduring impact continues to shape
+            philosophical, scientific, and political thought, making him a timeless figure in the annals of human
+            knowledge.
+        </p>
+    </div>
+
+
 </body>
 
 </html>
